--- a/css/portfolioStyles.css
+++ b/css/portfolioStyles.css
@@ -1,18 +1,40 @@
-/* Dustin Bryant, 11/7/19 */
+
+
+
+
+
+/*  
+Original Author: Dustin Bryant
+Date Created: 11/7/19
+Version: 1.0
+Date Last Modified: 2/21/2020
+Modified by: Dustin Bryant
+Modification log: First Draft
+Added heading and classes for the experience page
+*/
+/* Fonts */
 @font-face {
     font-family: 'quicksand';
     src: url('../fonts/Quicksand-Regular.otf');
     font-weight: normal;
     font-style: normal;
 }
-
-
+/* body styling */
 body {
     font-family: 'quicksand', 'Arial Narrow', Arial, sans-serif;
     background-color: #AFFFFB;
     margin: 0 10%;    
 }
 
+span {
+    font-weight: bold;;
+}
+
+hr {
+    border: 1px solid #57b1dc;
+}
+
+/* header styling */
 h1 {
     font-family: 'Montserrat', 'Arial Narrow', Arial, sans-serif;
     font-weight: normal;
@@ -21,36 +43,26 @@ h1 {
     margin-bottom: 0%;
 }
 
-span {
-    font-weight: bold;;
-}
-
 header img {
     float: left;
     margin-right: 0%;
     padding-bottom: 10px;
+    height: 150px;
+    width: auto;
 }
 
-h2,th {
-    color: gray;
-    font-size: 1em;
-    text-align: left;
-}
 
-hr {
-    border: 1px solid #57b1dc;
-}
-
+/* footer styling */
 #bottom {
     text-align: center;
     border-top: 5px solid #57b1dc;
     padding-top: 10px;
 }
 
-.middle {
-    font-family: Cambria;
+div#bottom div {
+    margin-top: 5px;
 }
-
+/* navigation styling */
 nav {
     display: table;
     width: 100%;
@@ -63,13 +75,16 @@ nav ul{
     list-style-type: none;
 }
 nav ul li {
+    
     display: table-cell;
     width: 20%;
     text-align: center;    
-    border-collapse: collapse;    
+    border-collapse: collapse;   
 }
 
 nav ul li a {
+    color: gray;
+    font-weight: bolder;
     text-decoration: none;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -81,16 +96,21 @@ nav ul li a {
 }
 
 .fade:hover {
-    background-color: #57b1dc;    
+    background-color: #57b1dc;
 }
 
-footer div {
-    margin-top: 5px;
+.fade:hover a {
+    color: white;       
+}
+/* Table styling on Experience and Contact page*/
+th {
+    color: gray;
+    font-weight: bolder;
+    font-size: 1em;
+    text-align: left;
 }
 
-img {
-    border-radius: 50%;
-}
+/* Table styling on Experience page*/
 fieldset {
     border: 2px solid #57b1dc;
 }
@@ -99,13 +119,14 @@ table.exp {
     width: 90%;
     margin: auto;
     border: 2px solid #57b1dc;
+    table-layout: fixed;
+    border-spacing: 6px;   
 }
 
 table.exp tbody tr:hover {
     background-color: #57b1dc;
 }
 table.exp td {
-    width: 10px;
     border-top: 2px solid #57b1dc;    
 }
 
@@ -114,6 +135,14 @@ table.exp tfoot {
    font-style: italic; 
 }
 
+.answer-hide {
+    display: none;
+}
+
+.open {
+    display: table-row-group;
+}
+/* Button/Link on index page*/
 #hireme {
     display: block;
     text-decoration: none;
@@ -127,6 +156,27 @@ table.exp tfoot {
     background-color: #57b1dc;
     transition: .4s;
 }
+.employee_table {
+    width: 90%;
+    margin: auto;
+}
+
+.employees {
+    display: inline-block;
+    align: center;
+    text-decoration: none;
+    text-align: center;
+    padding: 10px;
+    width: 120px;
+    
+    margin-left: auto;
+    margin-right: auto;  
+    margin-bottom: 3px;
+    box-sizing: border-box;
+    border: 2px solid black;
+    background-color: #57b1dc;
+    transition: .4s;
+}
 
 #hireme:hover {
     background-color: #AFFFFB;
@@ -135,20 +185,21 @@ table.exp tfoot {
 #hireme:visited {
     color: black;
 }
-
-.aboutleft {
+/* Image in About page */
+div#about {
     float:left;
     margin-right: 10px;
 }
-.aboutright {
-    float:right;
-    margin-right: 10px;
-}
 
-div#mainback {
-    background-color: lightgray;
-    border-radius: 10%;
-    padding: 5%;
+div#about img {
+    border-radius: 50%;
+    height: 100px;
+    width: auto;
+}
+/* Form styling */
+form {
+    width: 90%;
+    margin: auto;
 }
 
 table.pagevisitors {
